<resources>
    <string name="app_name">BMI-Analyzer</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="next_text"><u>Next</u></string>
    <string name="bmi_analyser">BMI Analyser</string>
    <string name="if_you_already_have_an_account_log_in">If you already have an account, Log in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="username">Username</string>
    <string name="et_username">Username</string>
    <string name="password">Password</string>
    <string name="log_in_btn">LOG IN</string>
    <string name="you_don_t_have_an_account">You Don\'t Have An Account? </string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_btn">CREATE</string>
    <string name="log_in">Log In</string>
    <string name="you_have_an_acount">You Have An Acount? </string>
    <string name="sign_in">SIGN IN</string>
    <string name="re_password">Re-Password</string>
    <string name="e_mail">E-mail</string>
    <string name="if_you_do_not_already_have_an_account">If you do not already have an account</string>
    <string name="save_data">Save Data</string>

    <string name="log_out_link"><u>Logout</u></string>


</resources>