<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Sign_up_activity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#0983D6">

        <TextView
            android:id="@+id/tv_title_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/bmi_analyser"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="666dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="#FAF8F8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_logo3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:background="#00FFFFFF"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/create_new_account"
                    android:textColor="#0983D6"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tv_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/if_you_do_not_already_have_an_account"
                    android:textColor="#B3B3B3"
                    android:textSize="17sp"
                    tools:ignore="TextContrastCheck" />


                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="#0983D6">


                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="350dp"
                        android:layout_height="39dp"
                        android:autofillHints="ww"
                        android:background="#FFFFFF"
                        android:ems="10"
                        android:fontFamily="sans-serif-medium"
                        android:hint="@string/name"

                        android:inputType="text"
                        android:paddingStart="15dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="5dp"
                        android:textColorHint="#B3B3B3"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
                </FrameLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="#0983D6">


                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="350dp"
                        android:layout_height="39dp"
                        android:autofillHints="ww"
                        android:background="#FFFFFF"
                        android:ems="10"
                        android:fontFamily="sans-serif-medium"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress"
                        android:paddingStart="15dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="5dp"
                        android:textColorHint="#B3B3B3"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="#0983D6">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColorHint="#B3B3B3"
                        app:passwordToggleEnabled="true">


                        <EditText
                            android:id="@+id/et_signup_password"
                            android:layout_width="350dp"
                            android:layout_height="55dp"
                            android:autofillHints="ff"
                            android:background="#FFFFFF"
                            android:ems="10"
                            android:fontFamily="sans-serif-medium"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="#0983D6">

                    <EditText
                        android:id="@+id/et_ensure_password"
                        android:layout_width="350dp"
                        android:layout_height="55dp"
                        android:autofillHints="ff"
                        android:background="#FFFFFF"
                        android:ems="10"
                        android:fontFamily="sans-serif-medium"
                        android:hint="@string/re_password"
                        android:inputType="textPassword"
                        android:paddingStart="15dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="5dp"
                        android:textColorHint="#B3B3B3"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />





                </FrameLayout>


                <TextView
                    android:id="@+id/tv_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/round_corner"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="125dp"
                    android:paddingTop="5dp"
                    android:paddingRight="125dp"
                    android:paddingBottom="5dp"
                    android:shadowColor="#4E4E4E"
                    android:text="@string/create_btn"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    app:backgroundTint="#0983D6" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="#FFFFFF">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_note2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/you_have_an_acount"
                            android:textColor="#050505"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_to_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/log_in"
                            android:textColor="#0983D6"
                            android:textSize="16sp"
                            tools:ignore="TextContrastCheck" />

                    </LinearLayout>
                </FrameLayout>


            </LinearLayout>


        </FrameLayout>


    </FrameLayout>

</LinearLayout>